# react-native-file-hash

./: .gitignore  .gitmodules  .npmrc  .prettierrc.js  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  FileHash.podspec  FileHashSpec.ts  LICENSE  README.md  app.plugin.js  eslint.config.mjs  index.ts  package.json  react-native-file-hash.podspec  react-native.config.js  tsconfig.build.json  tsconfig.json  turbo.json
.github/ISSUE_TEMPLATE/: config.yml
.github/actions/setup/: action.yml
.github/actions/setup-zig/: action.yml
.github/workflows/: ci.yml  manual-publish.yml  npm-publish.yml  publish.yml
.maestro/: runtime-native-smoke-ios.yaml  runtime-native-smoke.yaml  runtime-zig-smoke-ios.yaml  runtime-zig-smoke.yaml
android/: build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  error_mapping.cpp  error_mapping.h  hash_jni.cpp  jni_utils.cpp  jni_utils.h  zig_bridge.cpp  zig_bridge.h  zig_jni.cpp
android/src/main/java/com/preeternal/filehash/: FileHashModule.kt  FileHashModuleLegacy.kt  FileHashPackage.kt  FileHashPackageLegacy.kt  FileHashSpec.kt  HashEngineExecutor.kt  HashEngineSupport.kt  HashOperation.kt  NativeHashEngine.kt  NativeHasher.kt  Sha512t.kt  ZigHashEngine.kt  ZigHasher.kt
android/src/main/java/com/preeternal/hash/utils/: HashUtilsModule.kt  HashUtilsModuleLegacy.kt  HashUtilsPackage.kt  HashUtilsPackageLegacy.kt  HashUtilsSpec.kt
android/src/main/newarch/: FileHashSpec.kt
android/src/main/oldarch/: FileHashSpec.kt
android/src/test/java/com/preeternal/filehash/: Sha512tTest.kt
docs/: engine-architecture.ru.md
example/: app.json  metro.config.js  package.json
example/android/: gradle.properties  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/preeternal/reactnativefilehash/example/: BenchmarkFileModule.kt  BenchmarkFilePackage.kt  MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/FileHashExample/: AppDelegate.swift  BenchmarkFileModule.m  Info.plist  LaunchScreen.storyboard
example/ios/FileHashExample.xcodeproj/: project.pbxproj
example/ios/FileHashExample.xcodeproj/xcshareddata/xcschemes/: FileHashExample.xcscheme
example/ios/FileHashExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
examples/macos/: App.tsx  README.md  app.json  metro.config.js  package.json  react-native.config.js
examples/macos/macos/: Podfile
examples/macos/macos/FileHashMacOSExample-macOS/: AppDelegate.mm  BenchmarkFileModule.h  BenchmarkFileModule.mm  MacFilePicker.h  MacFilePicker.mm
examples/macos/macos/FileHashMacOSExample-macOS/Base.lproj/: Main.storyboard
examples/macos/macos/FileHashMacOSExample.xcodeproj/: project.pbxproj
examples/macos/macos/FileHashMacOSExample.xcodeproj/xcshareddata/xcschemes/: FileHashMacOSExample-macOS.xcscheme
examples/macos/macos/FileHashMacOSExample.xcworkspace/: contents.xcworkspacedata
examples/windows/: App.tsx  README.md  app.json  metro.config.js  package.json  react-native.config.js
examples/windows/windows/: FileHashWindowsExample.sln
examples/windows/windows/FileHashWindowsExample/: AutolinkedNativeModules.g.cpp  BenchmarkFile.cpp  BenchmarkFile.h  FileHashWindowsExample.cpp  FileHashWindowsExample.vcxproj  FileHashWindowsExample.vcxproj.filters  resource.h
examples/windows/windows/FileHashWindowsExample.Package/: FileHashWindowsExample.Package.wapproj  Package.appxmanifest
ios/: FileHash.h  FileHash.m  FileHash.mm  FileHash.podspec  FileHash.swift  FileHashBridgeHelpers.h  FileHashBridgeHelpers.mm  FileHashBridgeNative.h  FileHashBridgeNative.m  FileHashBridgeZig.h  FileHashBridgeZig.mm  FileHashZigHelpers.h  FileHashZigHelpers.mm  HashNative.h  HashNative.mm
lib/: FileHashSpec.d.ts  FileHashSpec.js  index.d.ts  index.js
scripts/: build-zig-android.sh  build-zig-ios.sh  build-zig-macos.sh  build-zig-windows.sh  check-16kb.sh  check-packed-prebuilts.sh  compare-size-android.sh  compare-size-ios.sh  maestro-runtime-smoke.sh
src/: FileHashSpec.ts  NativeFileHash.ts  index.ts  index.tsx  jest.setup.ts
src/__tests__/: index.test.tsx
windows/: FileHash.sln
windows/FileHash/: FileHash.cpp  FileHash.h  FileHash.vcxproj  FileHash.vcxproj.filters  ReactPackageProvider.cpp  ReactPackageProvider.h  ReactPackageProvider.idl  pch.h
windows/FileHash/codegen/: FileHashSpecJSI.h  NativeFileHashSpec.g.h
